change Intro layout

--- a/public/index.html
+++ b/public/index.html
@@ -11,16 +11,17 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <title>Working Dookdik</title>
+    <link href="https://fonts.googleapis.com/css2?family=Forum&family=Suravaram&display=swap" rel="stylesheet">
+    <title>Yanisa P.</title>
     <style>
-    
+      /* fonts
+      ---------
+      font-family: 'Suravaram', serif;
+      font-family: 'Forum', cursive;
+      */
+      
     *{
-      font-family: 'Montserrat Alternates', sans-serif;
+      font-family: 'Suravaram', serif;
       margin: 0;
       overflow-x: hidden;
     }
