add resume, Intro minor fix

--- a/public/index.html
+++ b/public/index.html
@@ -11,13 +11,14 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Forum&family=Suravaram&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Forum&family=Suravaram&family=Roboto+Mono&display=swap" rel="stylesheet">
     <title>Yanisa P.</title>
     <style>
       /* fonts
       ---------
       font-family: 'Suravaram', serif;
       font-family: 'Forum', cursive;
+      font-family: 'Roboto Mono', monospace;
       */
       
     *{
