--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Forum&family=Suravaram&family=Roboto+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Forum&family=Suravaram&family=Roboto+Mono&family=Poppins:wght@900&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <title>Yanisa P.</title>
     <style>
       /* fonts
